# risk_lens

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  __main__.py  cli.py  core.py  tool_registry.py
agent/tools/: __init__.py  analytics.py  chart_tools.py  market_data.py  portfolio_tools.py
backend/llm/: __init__.py  agent_13f.py  risk_analyzer.py  schemas.py  tools.py  tools_13f.py  var_analyzer.py
backend/llm/caching/: __init__.py  client.py  metrics.py
backend/llm/guardrails/: __init__.py  constitutional.py  input_guards.py  output_guards.py  process_guards.py
backend/llm/providers/: __init__.py  base.py  claude_provider.py  config.py  openai_provider.py
backend/llm/redteam/: __init__.py  attacks.py  cli.py  report.py  runner.py
backend/llm/tracing/: __init__.py  core.py  instrumentation.py  storage.py  tracer.py
backend/reporting/: portfolio_report.py
backend/risk_engine/: factor_analysis.py  portfolio_fit.py  portfolio_pca.py  regime_analysis.py  regime_simulation.py
backend/risk_engine/var/: var_engine.py  var_engine_numba.py
backend/sec/: __init__.py  cusip_mapper.py  edgar_client.py
core/: paths.py  timer.py  utils.py
docs/: 13f_import_workflow.md
examples/: __init__.py  basic_analysis.py  custom_tools.py
frontend/: app.py
frontend/components/: analysis_display.py  cache_display.py  chat.py  guardrails_display.py  import_13f.py  trace_viewer.py  upload.py
frontend/services/: chat_service.py  portfolio_service.py
frontend/utils/: formatters.py
models/: factor_model.py  portfolio.py  regime_analysis_result.py  regime_model.py
models/data/: portfolios.csv  time_series.csv
models/data/factor_models/: fama_french.csv
models/data/holdings/: port_100.csv  port_101.csv  port_102.csv  port_103.csv  port_104.csv  port_105.csv  port_106.csv  port_107.csv  port_108.csv  port_109.csv  port_110.csv  port_111.csv  port_112.csv  port_113.csv  port_114.csv  port_115.csv  port_116.csv  port_117.csv  port_118.csv  port_119.csv
models/data/regime/: covs.csv  means.csv  regime_desc.csv  regimes.csv  txn_matrix.csv
models/enrichment/: price_enricher.py  time_series_enricher.py
tests/: quick_tests.py  test_backend.py  test_caching.py  test_core.py  test_factors.py  test_frontend.py  test_guardrails.py  test_mcp.py  test_models.py  test_redteam.py  test_regimes.py  test_tracing.py
