[project]
name = "risk_lens"
version = "0.1.0"
description = "Demo of Risk Lens Software for Anthropic"
authors = [
    {name = "aleksey matiychenko", email = "aleksey@purpleswansoftware.com"},
]

dependencies = ["pandas>=2.3.3",
       "yfinance>=0.2.66",
       "pyyaml>=6.0.3",
       "pandas-datareader>=0.10.0",
       "setuptools>=70",
       "statsmodels>=0.14.5",
       "scikit-learn>=1.7.2",
       "anthropic>=0.75.0",
       "pyarrow>=22.0.0",
       "streamlit>=1.40.0",
       "matplotlib>=3.9.0"]

requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
download-pswn-bucket = "python tests/download_pswn_bucket.py"
app = "streamlit run frontend/app.py"
test = "pytest tests/ -v"
coverage = "pytest tests/ --cov=. --cov-report=html --cov-report=term-missing"
